--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -8,7 +8,7 @@
       = render 'form', order: @order
 
     .card#open_orders
-      .card-header Order book
+      .card-header Order book (#{@order.base_asset.symbol}/#{@order.quote_asset.symbol})
       .card-body
         %table.table
           %thead
@@ -29,7 +29,7 @@
     .card-body
       #chart
       :coffeescript
-        stockChart('chart', #{raw @asset.price_chart_data(@asset.platform.native_asset).to_json})
+        stockChart('chart', #{raw @asset.price_chart_data(current_quote_asset.id).to_json})
 
   .card#my_orders
     .card-header My open orders
@@ -42,7 +42,7 @@
             %th= t '.filled'
             %th
         %tbody
-          %tr(v-for="order in STATE.openOrders.orderBy('rate')")
+          %tr(v-for="order in STATE.openOrders.where({base_asset_id: #{@order.base_asset_id}, quote_asset_id: #{@order.quote_asset_id}}).orderBy('rate')")
             %td {{ order.side }} @ {{ order.kind == 'market' ? 'market' : order.rate }}
             %td(v-if="order.kind == 'market' && order.side == 'buy'") {{ order.total - order.total_used }}
             %td(v-else) {{ order.quantity - order.quantity_filled }}
@@ -63,7 +63,8 @@
     subscriptions:
       OrdersChannel:
         params: ->
-          asset_ids: [#{ @order.base_asset_id }]
+          base_asset_id: #{ @order.base_asset_id }
+          quote_asset_id: #{ @order.quote_asset_id }
         received: (message) ->
           if (message.cancelled_at || message.filled_at)
             @openOrders.delete(message)
