--- a/app/views/pages/welcome.html.haml
+++ b/app/views/pages/welcome.html.haml
@@ -3,7 +3,7 @@
     .text-center
       %h1.display-4= t '.welcome_to'
       -# %p.lead= t '.24hvolume', amount: Trade.volume(Asset.eth, 24.hours).to_s + ' ETH'
-      %p.lead= t '.24hvolume', amount: Trade.volume(Asset.rinkeby, 24.hours).to_s + ' ETH(rinkeby)'
+      %p.lead= t '.24hvolume', amount: Trade.volume(current_quote_asset, 24.hours).to_s + ' ' + current_quote_asset.symbol
       %p #{ t('.sounds_good') } #{ link_to t('.create_token'), '/pages/token_studio', class: 'btn btn-lg btn-outline-primary' } or #{ link_to t('.submit_existing'), new_asset_path }
 %section.featured
   .container.py-3.pt-md-5.pb-md-4.mx-auto
