tabbed interface for orders#index fixes #13, ui tweaks

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -75,7 +75,7 @@
                 data: ->
                   STATE: STATE
                 el: '#top_balance'
-            %li.nav-item= link_to 'Deposit/Withdraw', '/cached_balances', class: 'nav-link'
+            %li.nav-item= link_to 'My Assets', '/cached_balances', class: 'nav-link'
             %li.nav-item= link_to 'My Orders', '/orders', class: 'nav-link'
             %li.nav-item.d-inline-block
               %span Logged in as 
