--- a/app/views/assets/index.html.haml
+++ b/app/views/assets/index.html.haml
@@ -1,5 +1,5 @@
 .container
-  %h1.mt-5 All assets
+  %h1.mt-5 #{current_quote_asset.symbol} Market
   %p Sorted by 24h volume
   .card
     .card-body
