--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -20,8 +20,8 @@
           %tbody
             %tr(v-for="order in openOrders.orderBy('rate')" v-on:click="matchOrder(order)")
               %td {{ order.side }} @ {{ order.kind == 'market' ? 'market' : order.rate }}
-              %td(v-if="order.kind == 'market' && order.side == 'buy'") {{ big(order.total).minus(order.total_used).toString() }}
-              %td(v-else) {{ big(order.quantity).minus(order.quantity_filled).toString() }}
+              %td(v-if="order.kind == 'market' && order.side == 'buy'") {{ big(order.total).minus(order.total_used).toFixed() }}
+              %td(v-else) {{ big(order.quantity).minus(order.quantity_filled).toFixed() }}
               -# %td {{ order.filled_percent }}%
               %td
 
@@ -44,10 +44,10 @@
         %tbody
           %tr(v-for="order in STATE.openOrders.where({base_asset_id: #{@order.base_asset_id}, quote_asset_id: #{@order.quote_asset_id}}).orderBy('rate')")
             %td {{ order.side }} @ {{ order.kind == 'market' ? 'market' : order.rate }}
-            %td(v-if="order.kind == 'market' && order.side == 'buy'") {{ order.total - order.total_used }}
-            %td(v-else) {{ order.quantity - order.quantity_filled }}
-            %td(v-if="order.kind == 'market' && order.side == 'buy'") {{ Math.floor(100 * order.total_used / order.total) }}%
-            %td(v-else) {{ Math.floor(100 * order.quantity_filled / order.quantity) }}%
+            %td(v-if="order.kind == 'market' && order.side == 'buy'") {{ big(order.total).minus(order.total_used).toFixed() }}
+            %td(v-else) {{ big(order.quantity).minus(order.quantity_filled).toFixed() }}
+            %td(v-if="order.kind == 'market' && order.side == 'buy'") {{ Math.floor(1000 * order.total_used / order.total) / 10 }}%
+            %td(v-else) {{ Math.floor(1000 * order.quantity_filled / order.quantity) / 10 }}%
             %td
               %a(:href="`/orders/${order.id}`" data-method="delete" data-remote="true" rel="no-follow") Cancel
 
@@ -96,3 +96,6 @@
     el: '#my_orders'
     data: ->
       STATE: STATE
+    methods:
+      big: (num) ->
+        new Big(num)
