--- a/app/views/pages/welcome.html.haml
+++ b/app/views/pages/welcome.html.haml
@@ -1,16 +1,7 @@
-%section.hero
-  .container
-    .text-center
-      %h1.display-4= t '.welcome_to'
-      %p ...so you can keep on #BUIDLing.
-      -# %p.lead= t '.24hvolume', amount: Trade.volume(Asset.eth, 24.hours).to_s + ' ETH'
-      %p.lead= t '.24hvolume', amount: Trade.volume(current_quote_asset, 24.hours).to_s + ' ' + current_quote_asset.symbol
-      %p #{ link_to t('.create_token'), '/pages/token_studio', class: 'btn btn-lg btn-outline-primary' } or #{ link_to t('.submit_existing'), new_asset_path }
-
-    .text-center
 %section.top
   .container.py-3.pt-md-5.pb-md-4.mx-auto
     %h1.display-4.text-center Top assets
+    %p.text-center.lead= t '.24hvolume', amount: Trade.volume(current_quote_asset, 24.hours).to_s + ' ' + current_quote_asset.symbol
     .card
       .card-body
         %table.table
@@ -27,7 +18,7 @@
                   = current_quote_asset.symbol
                 %td
                   = line_chart asset.hourly_prices(current_quote_asset), height: '66px', width: '320px'
-
+    %p.mt-3.text-center #{ link_to t('.create_token'), '/pages/token_studio', class: 'btn btn-lg btn-outline-primary' } or #{ link_to t('.submit_existing'), new_asset_path }
 
 %section.featured
   .container.py-3.pt-md-5.pb-md-4.mx-auto
